# ipc_prototype

./: .clang-format  Architecture.archimate  CANapp.archimate  CMakeLists.txt  canapp.cpp  ccondvar.cpp  leading.cpp  readme.md  time_dia.drawio
canopenmaster/: CMakeLists.txt  ccanopenmaster.cpp
canopenmaster/include/: ccanopenmaster.h
include/: cappargs.hpp  ccanopenmaster.h  ccondvar.h  help.h  leading.h  shm_names.h
spsc_queue_example/: Makefile  consumer.cpp  producer.cpp  readme.md
